Add RBAC using roles and secure admin endpoints